Add booking and authentication for back-office (#34)
* adding authentification and user sql (#28)

* fixing swagger documentation with updated road and exemple (#29)

* booking addition (#30)

* creating table and crub for booking in sql

* backoffice and views for booking

* adding booking to home

* adding API and swagger for booking

* Adding test with cypress, logout action and product interaction (#31)

* add cypress and logout action

* add switch button for list product and testing the result

* refactoring and fixing bug

* update view and seeding (#32)

* Addding authentification, cypress and booking (#33)

* fixing bug

---------
