# app/api/routers/router.js
@@ -3,6 +3,7 @@ import { apiCategoryRouter } from './category.router.js';
 import { apiPlotRouter } from './plot.router.js';
 import { apiProductRouter } from './product.router.js';
 import { apiVarietyRouter } from './variety.router.js';
+import { apiBookingRouter } from './booking.router.js';
 
 const apiRouter = Router();
 
@@ -10,5 +11,6 @@ apiRouter.use('/categories', apiCategoryRouter);
 apiRouter.use('/plots', apiPlotRouter);
 apiRouter.use('/products', apiProductRouter);
 apiRouter.use('/varieties', apiVarietyRouter);
+apiRouter.use('/bookings', apiBookingRouter);
 
 export { apiRouter };
