# app/backoffice/routers/router.js
@@ -4,6 +4,7 @@ import { categoryRouter } from './category.router.js';
 import { plotRouter } from './plot.router.js';
 import { productRouter } from './product.router.js';
 import { varietyRouter } from './variety.router.js';
+import { bookingRouter } from './booking.router.js';
 
 const adminRouter = Router();
 
@@ -13,5 +14,6 @@ adminRouter.use('/categories', categoryRouter);
 adminRouter.use('/plots', plotRouter);
 adminRouter.use('/products', productRouter);
 adminRouter.use('/varieties', varietyRouter);
+adminRouter.use('/bookings', bookingRouter);
 
 export default adminRouter;
